--- a/openai-demo-service/build.gradle
+++ b/openai-demo-service/build.gradle
@@ -24,6 +24,14 @@ ext {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.ai:spring-ai-starter-model-openai'
+
+	implementation 'org.springframework.ai:spring-ai-vector-store:1.0.0-M8'
+	// https://mvnrepository.com/artifact/group.springframework.ai/spring-ai-tika-document-reader
+	implementation 'org.springframework.ai:spring-ai-tika-document-reader'
+
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
@@ -33,6 +41,13 @@ dependencyManagement {
 		mavenBom "org.springframework.ai:spring-ai-bom:${springAiVersion}"
 	}
 }
+
+configurations {
+	compileOnly {
+		extendsFrom annotationProcessor
+	}
+}
+
 
 tasks.named('test') {
 	useJUnitPlatform()
