--- a/openai-demo-service/src/main/resources/application.properties
+++ b/openai-demo-service/src/main/resources/application.properties
@@ -2,5 +2,6 @@ spring.application.name=openai-demo-service
 
 spring.ai.openai.api-key=${OPENAI_API_KEY}
 
-vector.store.data.moviesVector=./tmp/movivevector.json
-vector.store.data.moviesToLoad=classpath:./movie.csv
+
+vector.store.data.moviesToLoad=classpath:./movies.csv
+vector.store.data.moviesVector=./tmp/moviesvector.json
