--- a/openai-demo-service/build.gradle
+++ b/openai-demo-service/build.gradle
@@ -13,24 +13,27 @@ java {
 	}
 }
 
+configurations {
+	compileOnly {
+		extendsFrom annotationProcessor
+	}
+}
+
 repositories {
 	mavenCentral()
 }
 
 ext {
-	set('springAiVersion', "1.0.0-M8")
+	set('springAiVersion', "1.0.0-RC1")
 }
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.ai:spring-ai-starter-model-openai'
 
-	implementation 'org.springframework.ai:spring-ai-vector-store:1.0.0-M8'
+	implementation 'org.springframework.ai:spring-ai-vector-store'
 	// https://mvnrepository.com/artifact/group.springframework.ai/spring-ai-tika-document-reader
 	implementation 'org.springframework.ai:spring-ai-tika-document-reader'
-
-	compileOnly 'org.projectlombok:lombok'
-	annotationProcessor 'org.projectlombok:lombok'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
@@ -41,13 +44,6 @@ dependencyManagement {
 		mavenBom "org.springframework.ai:spring-ai-bom:${springAiVersion}"
 	}
 }
-
-configurations {
-	compileOnly {
-		extendsFrom annotationProcessor
-	}
-}
-
 
 tasks.named('test') {
 	useJUnitPlatform()
